畑一覧を取得する機能_フロントエンド側
